Tempo Kubernetes 리소스 추가: Azure 스토리지 설정, 배포, 서비스, PVC 및 구성 파일 포함

--- a/minikube/kustomization.yaml
+++ b/minikube/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: monitoring
 
 resources:
   - namespace.yaml
-  - ../../loki
-  - ../../mimir
-  - ../../grafana
+  - loki/
+  - mimir/
+  - grafana/
+  - tempo/
