Dockerfile 및 package.json 수정: CMD 명령어를 'pnpm start'로 변경하고, package.json의 'start' 스크립트에서 경로를 수정함

--- a/minikube/examples/nodejs/package.json
+++ b/minikube/examples/nodejs/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "nodemon --exec \"ts-node src/app.ts\"",
-    "start": "node --require dist/instrumentation.js dist/app.js",
+    "start": "node --require ./dist/instrumentation.js dist/app.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
