deployment.yaml에 Grafana 인스턴스 이름 추가 및 OTLP 엔드포인트 수정, app.ts에서 헬스 체크 경로에 대한 메트릭 수집 생략 처리, values.yaml에서 alloy-singleton 비활성화 및 alloy-receiver 활성화

--- a/minikube/examples/nodejs/deploy/deployment.yaml
+++ b/minikube/examples/nodejs/deploy/deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       annotations:
         "k8s.grafana.com/scrape": "true"
+        "k8s.grafana.com/instance": "dice-server"
       labels:
         app: dice-server
     spec:
@@ -24,7 +25,7 @@ spec:
             - name: OTEL_SERVICE_NAME
               value: 'dice-server'
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
-              value: http://monitoring-alloy-singleton.monitoring.svc.cluster.local:4318
+              value: http://monitoring-alloy-receiver.monitoring.svc.cluster.local:4318
           readinessProbe:
             httpGet:
               path: /healthz
