--- a/minikube/grafana/databases/datasource-gateway.yaml
+++ b/minikube/grafana/databases/datasource-gateway.yaml
@@ -28,7 +28,7 @@ datasources:
   jsonData:
     derivedFields:
       - datasourceUid: tempo
-        matcherRegex: tid=(\w+)
+        matcherRegex: '"trace_id":"(\w+)"'
         name: TraceID
         url: $${__value.raw}
 - name: Tempo
@@ -42,12 +42,12 @@ datasources:
   editable: true
   apiVersion: 1
   uid: tempo
-# - name: Pyroscope
-#   type: grafana-pyroscope-datasource
-#   access: proxy
-#   orgId: 1
-#   url: http://pyroscope:4040/
-#   basicAuth: false
-#   isDefault: false
-#   version: 1
-#   editable: true
+- name: Pyroscope
+  type: pyroscope
+  access: proxy
+  orgId: 1
+  url: http://pyroscope.monitoring.svc.cluster.local:4040
+  basicAuth: false
+  isDefault: false
+  version: 1
+  editable: true
