--- a/minikube/examples/nodejs/package.json
+++ b/minikube/examples/nodejs/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-node": "^2.0.0",
     "@opentelemetry/semantic-conventions": "^1.30.0",
+    "@pyroscope/nodejs": "^0.4.8",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "express-prometheus-middleware": "^1.2.0",
